--- a/Edwards_CV.tex
+++ b/Edwards_CV.tex
@@ -46,11 +46,13 @@
 \centering \LARGE \textbf{\underline{Graham Harper Edwards}} \\ [1em]
 \endgroup
 
+
+
 % Address and Info
-Earth \& Planetary Sciences \\
-University of California Santa Cruz \hfill \textit{Email:} ghedwards@ucsc.edu \\
-1156 High Street EMS A232 \hfill \textit{Phone:} 1.920.559.2279 \\
-Santa Cruz, CA 95060 U.S.A.	\hfill \textit{Website:} \href{https://grahamedwards.github.io}{grahamedwards.github.io}
+Earth Sciences \\
+Dartmouth College \hfill \textit{Email:} graham.h.edwards@dartmouth.edu \\
+19 Fayerweather Hill Rd \hfill \textit{Phone:} 1.920.559.2279 \\
+Hanover, NH, 03755, U.S.A.	\hfill \textit{Website:} \href{https://grahamedwards.github.io}{grahamedwards.github.io}
 
 \vspace{2ex}
 %-------------------------------------------
@@ -64,21 +66,34 @@ Santa Cruz, CA 95060 U.S.A.	\hfill \textit{Website:} \href{https://grahamedwards
 In addition to my research interests, I am dually committed to the inclusion, support, and retention of individuals and groups of diverse identities and backgrounds.
 \fi
 
+
+%-------------------------------------------
+%	Appointments
+%-------------------------------------------
+
+\section*{CURRENT APPOINTMENT}
+\subsection*{\textbf{Dartmouth College} \hfill 2021 – Present}
+\textit{NSF Postdoctoral Scholar (Astronomy \&\ Astrophysics)}
+\begin{itemize}
+	\item[] Planetesimal formation, giant planet migration, and stellar accretion in our solar system and beyond (Award \#\ 2102591)
+	\item[] Advisors: Profs. C. Brenhin Keller (Earth Sciences) \&\ Elisabeth Newton (Physics \&\ Astronomy)
+\end{itemize}
+	
+
+
 %-------------------------------------------
 %	EDUCATION
 %-------------------------------------------
 
 \section*{EDUCATION}
 
-\subsection*{\textbf{University of California Santa Cruz} \hfill 2016 – Present}
-\textit{Doctoral Studies}: Earth \& Planetary Sciences\\
-Candidacy Fall 2018 \\
-\textit{Proposed Dissertation Title}: Applications of the uranium decay chain to diverse problems in deep time and Quaternary studies: chronologic insights into processes of planetary interiors and the bases of glaciers.\\
-\textit{Advisor}: Prof. Terrence Blackburn\\
-\textit{Committee}: Profs. Slawek Tulaczyk ({\sl Chair}, UCSC), Myriam Telus (UCSC), Kurt Cuffey (UC Berkeley)
+\subsection*{\textbf{University of California Santa Cruz} \hfill 2021}
+\textit{PhD}: Earth Sciences\\
+\textit{Dissertation Title}: Applications of the uranium decay systems in deep time and the Quaternary: chronologic insights within planetary interiors and beneath glaciers\\
+\textit{Committee}: Profs. Terrence Blackburn (Chair, UCSC), Slawek Tulaczyk (UCSC), Myriam Telus (UCSC).
 
 \subsection*{\textbf{Bowdoin College} \hspace{15pt} Brunswick, ME \hfill 2014}
-\textit{Bachelor of Arts}: Earth and Oceanographic Science with Honors, Classics minor \\
+\textit{Bachelor of Arts}: Earth and Oceanographic Science with Honors, Classics (minor) \\
 \textit{Summa cum Laude}, $\Phi$BK Society
 
 %-------------------------------------------
@@ -104,6 +119,7 @@ Candidacy Fall 2018 \\
 \textit{Graduate Teaching Assistant}
 \begin{tabbing} \hspace{10pt} \= \hspace{2.5cm} \=  \kill
 
+\> Spring 2021 \> \textit{Radiogenic and Stable Isotopes}\\
 \> Fall 2020 \> \textit{Evolution of Earth}\\
 \> Fall 2019 \> \textit{Elements of Field Geology}\\
 \> Spring 2018 \>  \textit{Geochemistry of the Solar System}\\
@@ -133,8 +149,8 @@ Candidacy Fall 2018 \\
 \subsection*{\textbf{Santa Cruz Museum of Natural History} \hfill 2018 – Present}
 \textit{Volunteer Scientist}
 \begin{itemize}
-	\item Create educational content and host geoscience educational activities at monthly museum events.
-	\item During covid-19 pandemic shelter-in-place orders, prepared and performed in weekly educational video streams covering geoscience topics. Archived \emph{Rockin' Pop-Up} videos are available \href{https://www.santacruzmuseum.org/category/rockin-pop-up/}{here}.
+	\item Created educational content and hosted activities at monthly museum events.
+	\item Now remote, I continue to co-host monthly educational video streams covering geoscience topics. Link: \href{https://www.santacruzmuseum.org/category/rockin-pop-up/}{\emph{Rockin' Pop-Up} Archives}.
 \end{itemize}
 
 \subsection*{\textbf{Geoscientists Encouraging Openness and Diversity in the Earth Sciences} \hfill 2019 – 2020}
@@ -144,7 +160,7 @@ Candidacy Fall 2018 \\
 	\item One of six graduate student leaders responsible for the operation and development of GEODES.
 \end{itemize}
 
-\subsection*{\textbf{Skype a Scientist} \hfill 2019 – 2020}
+\subsection*{\textbf{Skype a Scientist} \hfill 2019 – 2021}
 \textit{Volunteer Scientist}
 \begin{itemize}
 	\item Prepare educational content and host video calls with elementary classrooms.
@@ -154,7 +170,7 @@ Candidacy Fall 2018 \\
 \subsection*{\textbf{Peary-MacMillan Arctic Museum} \hspace{15pt} Brunswick, ME, U.S.A. \hfill 2015 – 2016}
 \textit{Curatorial Intern}
 \begin{itemize}
-	\item Developed outreach programming and exhibition content.
+	\item Developed outreach programming and exhibit content.
 	\item Supplemented undergraduate courses with lectures drawing on museum collections.
 	\item Mentored and trained undergraduate student interns and employees.
 \end{itemize}
@@ -163,47 +179,8 @@ Candidacy Fall 2018 \\
 \textit{Security Volunteer}
 \begin{itemize}
 	\item Answered visitors' questions and facilitating interpretive discussions about natural history exhibits.
-	\item Enforced museum rules as an introductory volunteer (docents required multi-year training).
+%	\item Enforced museum rules as an introductory volunteer (docents required multi-year training).
 \end{itemize}
-
-%-------------------------------------------
-%	AWARDS & HONORS
-%-------------------------------------------
-
-\section*{AWARDS \& HONORS}
-
-\begin{itemize} [leftmargin=0pt,label={},itemsep=1ex]
-	\item ARCS Foundation Scholar Award (Fellowship) \hfill 2020 – 2021
-	\item UCSC Earth \& Planetary Sciences Outstanding TA Award (Honorable Mention) \hfill 2020
-	\item Aaron and Elizabeth Waters Award  \hfill 2019
-	\begin{itemize} [label={}, rightmargin=30ex]
-	\item \textit{Issued annually for the most outstanding proposal for PhD research in the UCSC Earth \& Planetary Sciences Dept.}
-	\end{itemize}
-	\item UC Santa Cruz Regent’s Fellowship \hfill 2016 – 2017
-	\item National Association of Geoscience Teachers Outstanding TA Award \hfill 2014
-	\item Sarah and James Bowdoin Scholar (Dean’s List) \hfill 2011 – 2013
-	\item Grua/O’Connell Research Award  \hfill 2013
-	\item Freedman Summer Research Fellowship in Coastal/Environmental Studies \hfill 2012
-\end{itemize}
-
-%-------------------------------------------
-%	CONFERENCE TALK/POSTER
-%-------------------------------------------
-
-\section*{SELECTED CONFERENCE ABSTRACTS}
-
-\begin{center} A more comprehensive list of abstracts is available on \href{https://scholar.google.com/citations?user=KHLOvgcAAAAJ&hl=en}{Google Scholar}. \end{center}
-
-\begin{etaremune} [itemsep=4pt, leftmargin=3ex]
-  \item Varah-Sikes, C.T., Edwards, G.H., Blackburn, T. 2020. [Poster]: Thermal histories in Type 7 ordinary chondrites: interpreting residence in parent body using petrologic observation and Pb-Pb phosphate thermochronology. \textit{Geological Society of America Annual Scientific Meeting}, Virtual.
-  \item G.H. Edwards, T. Blackburn, S. Tulaczyk, G.G. Piccione. 2019. [Poster]: U-series isotopics of silts from Taylor Valley, Antarctica: Applying comminution dating methods on polar desert tills and implications for the timeframe of valley incision. \textit{American Geophysical Union Fall Meeting}, San Francisco, CA, U.S.A.
-  \item  G.H. Edwards, T. Blackburn, S. Tulaczyk, G.G. Piccione. 2019. [Poster]: U-Series isotopics constrain timescale of bedrock comminution and glacial incision in Taylor Valley, Antarctica. \textit{Goldschmidt Annual Meeting}, Barcelona, ES.
-	\item  G.H. Edwards, T. Blackburn, G.G. Piccione. 2018. [Talk]: Cooling and disruption of the LL chondrite parent body. \textit{Lunar and Small Bodies Graduate Forum (LunGradCon)}, Mountain View, CA, U.S.A.
-  \item  G.H. Edwards, T. Blackburn, C.M.O’D. Alexander. 2017. [Talk]: Accretion and disruption histories of the ordinary chondrite parent bodies. \textit{Meteoritical Society Annual Meeting}, Santa Fe, NM, U.S.A.
-  \item G.H. Edwards, T. Blackburn, K.V. Smit. 2017. [Poster]: Timescales of crustal cooling of the Superior Craton near Attawapiskat, Ontario, Canada, and implications for extent of Keweenawan plume heating. \textit{American Geophysical Union Fall Meeting}, New Orleans, LA, U.S.A.
-  \item G.H. Edwards. 2014. [Poster]: Geochemical and stratigraphic analysis of the Linnévatnet sediment record: a provenance study of Late Holocene cirque glacier activity in Linnédalen, Spitsbergen, Svalbard. \textit{44th International Arctic Workshop}, Boulder, CO, U.S.A.
-\end{etaremune}
-\vspace{-12pt}
 
 %-------------------------------------------
 %	ADDITIONAL SERVICES, EXPERIENCES
@@ -213,7 +190,7 @@ Candidacy Fall 2018 \\
 
 \subsection*{\textbf{Mentored Undergraduates}}
 \begin{itemize}
-		\item Cosmo Varah-Sikes, (2019-2020), planned thesis (2021)
+		\item Cosmo Varah-Sikes, (2019-2021), thesis (2021)
 		\item Linh Phan (2020)
 		\item Michael Scudder (2018-2020), thesis (2020)
 		\item Alexander Levinson (2018)
@@ -228,8 +205,8 @@ Analytical Experience:
 		\item \textit{Limited:} ICP-OES, XRF, XRD
 	\end{itemize} \vspace{2ex}
 	
- \textit{W.M. Keck Isotope Facility}, UCSC \hfill 2016 -- Present\\
-Under the advisorship of lab director Prof. Terry Blackburn, I have been partially responsible for the operation and maintenance of this multi-user clean lab facility, including:
+ \textit{W.M. Keck Isotope Facility}, UCSC \hfill 2016 -- 2021\\
+Under the advisorship of lab director Prof. Terry Blackburn, I was partially responsible for the operation and maintenance of this multi-user clean lab facility, including:
 	\begin{itemize} 
 	\item Maintenance and operation of mass spectrometers and wet chemistry labs.
 	\item Training and supporting researchers in wet chemistry and mass spectrometric methods.
@@ -257,6 +234,49 @@ Under the advisorship of lab director Prof. Terry Blackburn, I have been partial
 	\textbf{Society Affiliations:} Geochemical Society, Geological Society of America, Meteoritical Society, American Geophysical Union.
 \end{hangparas}
 
+
+%-------------------------------------------
+%	AWARDS & HONORS
+%-------------------------------------------
+
+\section*{AWARDS \& HONORS}
+
+\begin{itemize} [leftmargin=0pt,label={},itemsep=1ex]
+	\item ARCS Foundation Scholar Award (Fellowship) \hfill 2020 – 2021
+	\item UCSC Earth \& Planetary Sciences Outstanding TA Award (Honorable Mention) \hfill 2020
+	\item Aaron and Elizabeth Waters Award  \hfill 2019
+	\begin{itemize} [label={}, rightmargin=30ex]
+	\item \textit{Issued annually for the most outstanding proposal for PhD research in the UCSC Department of Earth \& Planetary Sciences}
+	\end{itemize}
+	\item UC Santa Cruz Regent’s Fellowship \hfill 2016 – 2017
+	\item National Association of Geoscience Teachers Outstanding TA Award \hfill 2014
+	\item Grua/O’Connell Research Award  \hfill 2013
+	\item Freedman Summer Research Fellowship in Coastal/Environmental Studies \hfill 2012
+%	\item Sarah and James Bowdoin Scholar (Dean’s List) \hfill 2011 – 2013
+\end{itemize}
+
+%-------------------------------------------
+%	CONFERENCE TALK/POSTER
+%-------------------------------------------
+
+\section*{SELECTED CONFERENCE ABSTRACTS}
+
+\begin{center} A more comprehensive list of abstracts is available on \href{https://scholar.google.com/citations?user=KHLOvgcAAAAJ&hl=en}{Google Scholar}. \end{center}
+
+\begin{etaremune} [itemsep=4pt, leftmargin=3ex]
+  \item Varah-Sikes, C.T., Edwards, G.H., Blackburn, T. 2020. [Poster]: Thermal histories in Type 7 ordinary chondrites: interpreting residence in parent body using petrologic observation and Pb-Pb phosphate thermochronology. \textit{Geological Society of America Annual Scientific Meeting}, Virtual.
+  \item G.H. Edwards, T. Blackburn, S. Tulaczyk, G.G. Piccione. 2019. [Poster]: U-series isotopics of silts from Taylor Valley, Antarctica: Applying comminution dating methods on polar desert tills and implications for the timeframe of valley incision. \textit{American Geophysical Union Fall Meeting}, San Francisco, CA, U.S.A.
+  \item  G.H. Edwards, T. Blackburn, S. Tulaczyk, G.G. Piccione. 2019. [Poster]: U-Series isotopics constrain timescale of bedrock comminution and glacial incision in Taylor Valley, Antarctica. \textit{Goldschmidt Annual Meeting}, Barcelona, ES.
+	\item  G.H. Edwards, T. Blackburn, G.G. Piccione. 2018. [Talk]: Cooling and disruption of the LL chondrite parent body. \textit{Lunar and Small Bodies Graduate Forum (LunGradCon)}, Mountain View, CA, U.S.A.
+  \item  G.H. Edwards, T. Blackburn, C.M.O’D. Alexander. 2017. [Talk]: Accretion and disruption histories of the ordinary chondrite parent bodies. \textit{Meteoritical Society Annual Meeting}, Santa Fe, NM, U.S.A.
+  \item G.H. Edwards, T. Blackburn, K.V. Smit. 2017. [Poster]: Timescales of crustal cooling of the Superior Craton near Attawapiskat, Ontario, Canada, and implications for extent of Keweenawan plume heating. \textit{American Geophysical Union Fall Meeting}, New Orleans, LA, U.S.A.
+  \item G.H. Edwards. 2014. [Poster]: Geochemical and stratigraphic analysis of the Linnévatnet sediment record: a provenance study of Late Holocene cirque glacier activity in Linnédalen, Spitsbergen, Svalbard. \textit{44th International Arctic Workshop}, Boulder, CO, U.S.A.
+\end{etaremune}
+\vspace{-12pt}
+
+%-----------------------------------------------------
+% 	ADDITIONAL WORK EXPERIENCE
+%-----------------------------------------------------
 \begin{center}{\rule{2.5in}{0.5pt}}\end{center}  \begin{center}{\rule{2.5in}{0.5pt}}\end{center}
 	
 \subsection*{\textbf{Additional Work Experience}}
