--- a/Edwards_CV.tex
+++ b/Edwards_CV.tex
@@ -264,7 +264,8 @@ Under the advisorship of lab director Prof. Terry Blackburn, I was partially res
 \begin{center} A more comprehensive list of abstracts is available on \href{https://scholar.google.com/citations?user=KHLOvgcAAAAJ&hl=en}{Google Scholar}. \end{center}
 
 \begin{etaremune} [itemsep=4pt, leftmargin=3ex]
-  \item Varah-Sikes, C.T., Edwards, G.H., Blackburn, T. 2020. [Poster]: Thermal histories in Type 7 ordinary chondrites: interpreting residence in parent body using petrologic observation and Pb-Pb phosphate thermochronology. \textit{Geological Society of America Annual Scientific Meeting}, Virtual.
+  \item G.H. Edwards, T. Blackburn, G. Piccione, S. Tulaczyk, G.H. Miller, C. Sikes. 2020. [Talk]: Baffin Island subglacial precipitates record subglacial melting beneath the northern Laurentide Ice Sheet concurrent with Heinrich events. \textit{American Geophysical Union Fall Meeting}, New Orleans, LA, U.S.A.
+  \item C.T. Varah-Sikes, G.H. Edwards, T. Blackburn. 2020. [Poster]: Thermal histories in Type 7 ordinary chondrites: interpreting residence in parent body using petrologic observation and Pb-Pb phosphate thermochronology. \textit{Geological Society of America Annual Scientific Meeting}, Virtual.
   \item G.H. Edwards, T. Blackburn, S. Tulaczyk, G.G. Piccione. 2019. [Poster]: U-series isotopics of silts from Taylor Valley, Antarctica: Applying comminution dating methods on polar desert tills and implications for the timeframe of valley incision. \textit{American Geophysical Union Fall Meeting}, San Francisco, CA, U.S.A.
   \item  G.H. Edwards, T. Blackburn, S. Tulaczyk, G.G. Piccione. 2019. [Poster]: U-Series isotopics constrain timescale of bedrock comminution and glacial incision in Taylor Valley, Antarctica. \textit{Goldschmidt Annual Meeting}, Barcelona, ES.
 	\item  G.H. Edwards, T. Blackburn, G.G. Piccione. 2018. [Talk]: Cooling and disruption of the LL chondrite parent body. \textit{Lunar and Small Bodies Graduate Forum (LunGradCon)}, Mountain View, CA, U.S.A.
