update .gitignore, minor formatting

--- a/Edwards_CV.tex
+++ b/Edwards_CV.tex
@@ -61,7 +61,7 @@ Hanover, NH, 03755, U.S.A.	\hfill \textit{Website:} \href{https://grahamedwards.
 \iffalse
 \section{STATEMENT}
 
-\textbf{Research} \ I am a geochemist and geochronologist: my primary research interest is to resolve and refine timescales of Earth and solar system processes via radiometric records. My doctoral research has focused on the application of the uranium decay systems to uncover the tempos of high-temperature processes in deep time and subglacial processes in the Quaternary. In my future work, I am excited to hone my statistical techniques to apply to database studies of meteorite chemistries.
+\textbf{Research} \ I am a geochemist and cosmochemistand geochronologist: my primary research interest is to resolve and refine timescales of Earth and solar system processes via radiometric records. My doctoral research has focused on the application of the uranium decay systems to uncover the tempos of high-temperature processes in deep time and subglacial processes in the Quaternary. In my future work, I am excited to hone my statistical techniques to apply to database studies of meteorite chemistries.
 
 In addition to my research interests, I am dually committed to the inclusion, support, and retention of individuals and groups of diverse identities and backgrounds.
 \fi
@@ -75,7 +75,8 @@ In addition to my research interests, I am dually committed to the inclusion, su
 \subsection*{\textbf{Dartmouth College} \hfill 2021 – Present}
 \textit{NSF Postdoctoral Scholar (Astronomy \&\ Astrophysics)}
 \begin{itemize}
-	\item[] Planetesimal formation, giant planet migration, and stellar accretion in our solar system and beyond (Award \#\ 2102591)
+	\item[] Award \#\ 2102591
+	\item[] ``Planetesimal formation, giant planet migration, and stellar accretion in our solar system and beyond"
 	\item[] Advisors: Profs. C. Brenhin Keller (Earth Sciences) \&\ Elisabeth Newton (Physics \&\ Astronomy)
 \end{itemize}
 	
@@ -90,7 +91,7 @@ In addition to my research interests, I am dually committed to the inclusion, su
 \subsection*{\textbf{University of California Santa Cruz} \hfill 2021}
 \textit{PhD}: Earth Sciences\\
 \textit{Dissertation Title}: Applications of the uranium decay systems in deep time and the Quaternary: chronologic insights within planetary interiors and beneath glaciers\\
-\textit{Committee}: Profs. Terrence Blackburn (Chair, UCSC), Slawek Tulaczyk (UCSC), Myriam Telus (UCSC).
+\textit{Committee}: Profs. Terrence Blackburn (Chair), Slawek Tulaczyk, Myriam Telus.
 
 \subsection*{\textbf{Bowdoin College} \hspace{15pt} Brunswick, ME \hfill 2014}
 \textit{Bachelor of Arts}: Earth and Oceanographic Science with Honors, Classics (minor) \\
@@ -150,7 +151,14 @@ In addition to my research interests, I am dually committed to the inclusion, su
 \textit{Volunteer Scientist}
 \begin{itemize}
 	\item Created educational content and hosted activities at monthly museum events.
-	\item Now remote, I continue to co-host monthly educational video streams covering geoscience topics. Link: \href{https://www.santacruzmuseum.org/category/rockin-pop-up/}{\emph{Rockin' Pop-Up} Archives}.
+	\item I continue to co-host monthly educational video streams covering geoscience topics. Link: \href{https://www.santacruzmuseum.org/category/rockin-pop-up/}{\emph{Rockin' Pop-Up} Archives}.
+\end{itemize}
+
+\subsection*{\textbf{Skype a Scientist} \hfill 2019 – Present}
+\textit{Volunteer Scientist}
+\begin{itemize}
+	\item Prepare educational content and host video calls with elementary classrooms.
+	\item Teach geoscience concepts and share stories about experiences as a scientist.
 \end{itemize}
 
 \subsection*{\textbf{Geoscientists Encouraging Openness and Diversity in the Earth Sciences} \hfill 2019 – 2020}
@@ -158,13 +166,6 @@ In addition to my research interests, I am dually committed to the inclusion, su
 \begin{itemize}
 	\item Organize and implement outreach events centered on promoting awareness of issues facing underrepresented groups in the geosciences and cultivating a culture of inclusivity in the UCSC Earth \& Planetary Sciences Dept.
 	\item One of six graduate student leaders responsible for the operation and development of GEODES.
-\end{itemize}
-
-\subsection*{\textbf{Skype a Scientist} \hfill 2019 – 2021}
-\textit{Volunteer Scientist}
-\begin{itemize}
-	\item Prepare educational content and host video calls with elementary classrooms.
-	\item Teach geoscience concepts and share stories about experiences as a scientist.
 \end{itemize}
 
 \subsection*{\textbf{Peary-MacMillan Arctic Museum} \hspace{15pt} Brunswick, ME, U.S.A. \hfill 2015 – 2016}
@@ -231,9 +232,24 @@ Under the advisorship of lab director Prof. Terry Blackburn, I was partially res
 	\textbf{Reviewer for:} \textit{Geochronology}
 
 	\vspace{2ex}
-	\textbf{Society Affiliations:} Geochemical Society, Geological Society of America, Meteoritical Society, American Geophysical Union.
+	\textbf{Society Affiliations:} Meteoritical Society, American Astronomical Society, Geochemical Society, Geological Society of America, American Geophysical Union.
 \end{hangparas}
 
+%-------------------------------------------
+%	FUNDING
+%-------------------------------------------
+\iffalse
+\section*{FUNDING}
+\subsection*{\textbf{Current}}
+\textbf{National Science Foundation} \hfill 2021 -- 2024\\
+\textit{Astronomy \&\ Astrophysics Postdoctoral Fellowship}
+\begin{itemize}
+	\item[] Award \#\ 2102591
+	\item[] ``Planetesimal formation, giant planet migration, and stellar accretion in our solar system and beyond"
+	\end{itemize}
+
+\subsection*{\textbf{Prior}}
+\fi
 
 %-------------------------------------------
 %	AWARDS & HONORS
