--- a/Edwards_CV.tex
+++ b/Edwards_CV.tex
@@ -18,6 +18,8 @@
 
 \usepackage{hyperref} \usepackage[dvipsnames]{xcolor} \definecolor{linkcolor}{rgb}{0.0, 0.25, 0.42} \hypersetup{colorlinks=true, urlcolor=linkcolor}
 	%set link color to a lovely indigo dye.
+	
+\usepackage{adforn}
 
 \usepackage{hanging} % Hanging paragraphs for minor lists.
 
@@ -35,6 +37,8 @@
 
 \renewcommand\labelitemi{\boldmath$\cdot$}
 
+\newcommand{\ghedwards}{\textbf{G.H. Edwards}}
+
 \setlength{\parindent}{0pt}
 
 \begin{document}
@@ -44,16 +48,20 @@
 %-------------------------------------------
 
 %Name
-\begingroup
-\centering \LARGE \textbf{\underline{Graham Harper Edwards}} \\ [1em]
-\endgroup
+\begin{center}
+\LARGE\textbf{\underline{Graham Harper Edwards}}\\ [.3em]
+ %{\normalsize\adforn{60}}\large~~he, him~~{\normalsize\adforn{32}}
+ %{\normalsize\adforn{18}}\large~~he, him~~{\normalsize\adforn{46}}
+%{\normalsize\adforn{64}}\large~~he, him~~{\normalsize\adforn{36}}
+\large ---~~he, him~~---
+\end{center}
 
 
 
 % Address and Info
 Earth Sciences \\
 Dartmouth College \hfill \textit{Email:} graham.h.edwards@dartmouth.edu \\
-19 Fayerweather Hill Rd \hfill \textit{Phone:} 1.920.559.2279 \\
+19 Fayerweather Hill Rd \hfill \textit{Phone:} 1~920~559~2279 \\
 Hanover, NH, 03755, U.S.A.	\hfill \textit{Website:} \href{https://grahamedwards.github.io}{grahamedwards.github.io}
 
 \vspace{2ex}
@@ -93,10 +101,11 @@ Hanover, NH, 03755, U.S.A.	\hfill \textit{Website:} \href{https://grahamedwards.
 \section*{PUBLICATIONS}
 
 \begin{etaremune} [itemsep=4pt, leftmargin=3ex]
-\item G.H. Edwards, T. Blackburn, G. Piccione, S. Tulaczyk, G.H. Miller, C. Sikes. (\textit{in review}). Terrestrial evidence for ocean forcing of Heinrich events and subglacial hydrologic connectivity of the Laurentide Ice Sheet. \textit{Science Advances}.
-\item T. Blackburn, G.H. Edwards, S. Tulaczyk, M. Scudder, G. Piccione, B. Hallet, J.C. Zachos, B. Cheney, N. McLean, J.T. Babbe. 2020. Ice retreat in Wilkes Basin of East Antarctica during a warm interglacial. \textit{Nature} (583), 554-559. \href{https://doi.org/10.1038/s41586-020-2484-5}{doi: 10.1038/s41586-020-2484-5}. \textbf{Press:} \href{https://www.nationalgeographic.com/science/2020/07/east-antarctic-ice-sheet-more-vulnerable-to-melting-than-thought/}{National Geographic}.
-\item G.H. Edwards, T. Blackburn. 2020. Accretion of a large LL parent planetesimal from a recently formed chondrule population. \textit{Science Advances} (6), eaay8641. \href{https://advances.sciencemag.org/content/6/16/eaay8641}{doi: 10.1126/sciadv.aay8641}
-\item G.H. Edwards, T. Blackburn. 2018. Detecting the extent of ca. 1.1 Ga Midcontinent Rift plume heating using U-Pb thermochronology of the lower crust. \textit{Geology} (46), 911–914. \href{https://doi.org/10.1130/G45150.1}{doi: 10.1130/G45150.1} \item G.H. Edwards. 2014. Geochemical and stratigraphic analysis of the Linnévatnet sediment record: a study of Late Holocene cirque glacier activity in Spitsbergen, Svalbard. [\textit{Honor’s Thesis}] Bowdoin College: Brunswick, ME, U.S.A. 73 pp. \href{https://digitalcommons.bowdoin.edu/honorsprojects/12/}{[Undergraduate Research Commons]}
+\item \ghedwards, T. Blackburn, G. Piccione, S. Tulaczyk, G.H. Miller, C. Sikes. (\textit{in review}). Terrestrial evidence for ocean forcing of Heinrich events and subglacial hydrologic connectivity of the Laurentide Ice Sheet. \textit{Science Advances}.
+\item T. Blackburn, \ghedwards, S. Tulaczyk, M. Scudder, G. Piccione, B. Hallet, J.C. Zachos, B. Cheney, N. McLean, J.T. Babbe. 2020. Ice retreat in Wilkes Basin of East Antarctica during a warm interglacial. \textit{Nature} (583), 554-559. \href{https://doi.org/10.1038/s41586-020-2484-5}{doi: 10.1038/s41586-020-2484-5}. \textbf{Press:} \href{https://www.nationalgeographic.com/science/2020/07/east-antarctic-ice-sheet-more-vulnerable-to-melting-than-thought/}{National Geographic}.
+\item \ghedwards, T. Blackburn. 2020. Accretion of a large LL parent planetesimal from a recently formed chondrule population. \textit{Science Advances} (6), eaay8641. \href{https://advances.sciencemag.org/content/6/16/eaay8641}{doi: 10.1126/sciadv.aay8641}
+\item \ghedwards, T. Blackburn. 2018. Detecting the extent of ca. 1.1 Ga Midcontinent Rift plume heating using U-Pb thermochronology of the lower crust. \textit{Geology} (46), 911–914. \href{https://doi.org/10.1130/G45150.1}{doi: 10.1130/G45150.1} 
+\item \ghedwards. 2014. Geochemical and stratigraphic analysis of the Linnévatnet sediment record: a study of Late Holocene cirque glacier activity in Spitsbergen, Svalbard. [\textit{Honor’s Thesis}] Bowdoin College: Brunswick, ME, U.S.A. 73 pp. \href{https://digitalcommons.bowdoin.edu/honorsprojects/12/}{[Undergraduate Research Commons]}
 \end{etaremune}
 
 %-------------------------------------------
@@ -115,17 +124,18 @@ Hanover, NH, 03755, U.S.A.	\hfill \textit{Website:} \href{https://grahamedwards.
 \> Winter 2018 \> \textit{Geologic Principles}
 \end{tabbing}
 
+\subsection*{\textbf{Bowdoin College} \hspace{15pt} Brunswick, ME, U.S.A. \hfill 2012 – 2013}
+\textit{Laboratory Teaching Assistant}
+\begin{tabbing} \hspace{10pt} \= \hspace{2.5cm} \=  \kill
+\> Fall 2012, 2013 \> \textit{Investigating Earth}\\
+\> Fall 2013 \> \textit{Marine Biogeochemistry}
+\end{tabbing}
+
 \subsection*{\textbf{Bozeman \& Livingston Public Schools} \hspace{15pt} MT, U.S.A. \hfill 2015}
 \textit{Substitute Teacher}
 \begin{itemize}
 	\item Instructor and paraprofessional in K-12 classrooms.
 	\item Taught students with various educational needs in diverse subjects.
-\end{itemize}
-
-\subsection*{\textbf{Bowdoin College} \hspace{15pt} Brunswick, ME, U.S.A. \hfill 2012 – 2013}
-\textit{Laboratory Teaching Assistant}
-\begin{itemize}
-	\item Assisted instruction of field and laboratory activities for an introductory geoscience course.
 \end{itemize}
 
 %-------------------------------------------
@@ -308,14 +318,16 @@ Under the advisorship of lab director Prof. Terry Blackburn, I was partially res
 \begin{center} A more comprehensive list of abstracts is available on \href{https://scholar.google.com/citations?user=KHLOvgcAAAAJ&hl=en}{Google Scholar}. \end{center}
 
 \begin{etaremune} [itemsep=4pt, leftmargin=3ex]
-  \item G.H. Edwards, T. Blackburn, G. Piccione, S. Tulaczyk, G.H. Miller, C. Sikes. 2020. [Talk]: Baffin Island subglacial precipitates record subglacial melting beneath the northern Laurentide Ice Sheet concurrent with Heinrich events. \textit{American Geophysical Union Fall Meeting}, New Orleans, LA, U.S.A.
-  \item C.T. Varah-Sikes, G.H. Edwards, T. Blackburn. 2020. [Poster]: Thermal histories in Type 7 ordinary chondrites: interpreting residence in parent body using petrologic observation and Pb-Pb phosphate thermochronology. \textit{Geological Society of America Annual Scientific Meeting}, Virtual.
-  \item G.H. Edwards, T. Blackburn, S. Tulaczyk, G.G. Piccione. 2019. [Poster]: U-series isotopics of silts from Taylor Valley, Antarctica: Applying comminution dating methods on polar desert tills and implications for the timeframe of valley incision. \textit{American Geophysical Union Fall Meeting}, San Francisco, CA, U.S.A.
-  \item  G.H. Edwards, T. Blackburn, S. Tulaczyk, G.G. Piccione. 2019. [Poster]: U-Series isotopics constrain timescale of bedrock comminution and glacial incision in Taylor Valley, Antarctica. \textit{Goldschmidt Annual Meeting}, Barcelona, ES.
-	\item  G.H. Edwards, T. Blackburn, G.G. Piccione. 2018. [Talk]: Cooling and disruption of the LL chondrite parent body. \textit{Lunar and Small Bodies Graduate Forum (LunGradCon)}, Mountain View, CA, U.S.A.
-  \item  G.H. Edwards, T. Blackburn, C.M.O’D. Alexander. 2017. [Talk]: Accretion and disruption histories of the ordinary chondrite parent bodies. \textit{Meteoritical Society Annual Meeting}, Santa Fe, NM, U.S.A.
-  \item G.H. Edwards, T. Blackburn, K.V. Smit. 2017. [Poster]: Timescales of crustal cooling of the Superior Craton near Attawapiskat, Ontario, Canada, and implications for extent of Keweenawan plume heating. \textit{American Geophysical Union Fall Meeting}, New Orleans, LA, U.S.A.
-  \item G.H. Edwards. 2014. [Poster]: Geochemical and stratigraphic analysis of the Linnévatnet sediment record: a provenance study of Late Holocene cirque glacier activity in Linnédalen, Spitsbergen, Svalbard. \textit{44th International Arctic Workshop}, Boulder, CO, U.S.A.
+ \item \ghedwards, C.B. Keller, C. Stewart, E.R. Newton, 2022. A Bayesian framework for exploring the early impact history of the asteroid belt with meteorite thermochronology. \textit{85\textsuperscript{th} Annual Meeting of the Meteoritical Society}, Glasgow, Scotland. 
+  \item \ghedwards, G. Piccione, M. Gomez, 2022. Comparing in-person and virtual modes of a 4-year museum-based geoscience outreach program. \textit{Earth Educators' Rendezvous 2022}, Minneapolis, MN, U.S.A.
+  \item \ghedwards, T. Blackburn, G. Piccione, S. Tulaczyk, G.H. Miller, C. Sikes. 2020. [Talk]: Baffin Island subglacial precipitates record subglacial melting beneath the northern Laurentide Ice Sheet concurrent with Heinrich events. \textit{American Geophysical Union Fall Meeting}, New Orleans, LA, U.S.A.
+  \item C.T. Varah-Sikes, \ghedwards, T. Blackburn. 2020. [Poster]: Thermal histories in Type 7 ordinary chondrites: interpreting residence in parent body using petrologic observation and Pb-Pb phosphate thermochronology. \textit{Geological Society of America Annual Scientific Meeting}, Virtual.
+  \item \ghedwards, T. Blackburn, S. Tulaczyk, G.G. Piccione. 2019. [Poster]: U-series isotopics of silts from Taylor Valley, Antarctica: Applying comminution dating methods on polar desert tills and implications for the timeframe of valley incision. \textit{American Geophysical Union Fall Meeting}, San Francisco, CA, U.S.A.
+  \item  \ghedwards, T. Blackburn, S. Tulaczyk, G.G. Piccione. 2019. [Poster]: U-Series isotopics constrain timescale of bedrock comminution and glacial incision in Taylor Valley, Antarctica. \textit{Goldschmidt Annual Meeting}, Barcelona, ES.
+	\item  \ghedwards, T. Blackburn, G.G. Piccione. 2018. [Talk]: Cooling and disruption of the LL chondrite parent body. \textit{Lunar and Small Bodies Graduate Forum (LunGradCon)}, Mountain View, CA, U.S.A.
+  \item  \ghedwards, T. Blackburn, C.M.O’D. Alexander. 2017. [Talk]: Accretion and disruption histories of the ordinary chondrite parent bodies. \textit{Meteoritical Society Annual Meeting}, Santa Fe, NM, U.S.A.
+  \item \ghedwards, T. Blackburn, K.V. Smit. 2017. [Poster]: Timescales of crustal cooling of the Superior Craton near Attawapiskat, Ontario, Canada, and implications for extent of Keweenawan plume heating. \textit{American Geophysical Union Fall Meeting}, New Orleans, LA, U.S.A.
+  \item \ghedwards. 2014. [Poster]: Geochemical and stratigraphic analysis of the Linnévatnet sediment record: a provenance study of Late Holocene cirque glacier activity in Linnédalen, Spitsbergen, Svalbard. \textit{44th International Arctic Workshop}, Boulder, CO, U.S.A.
 \end{etaremune}
 \vspace{-12pt}
 
