add some prospective pub info

--- a/Edwards_CV.tex
+++ b/Edwards_CV.tex
@@ -102,6 +102,7 @@ Hanover, NH, 03755, U.S.A.	\hfill \textit{Website:} \href{https://grahamedwards.
 
 \begin{etaremune} [itemsep=4pt, leftmargin=3ex]
 %item \ghedwards \&\ G. Piccione, M. Gomez. (\textit{in prep}). Viewership patterns of a virtual geoscience outreach program. \textit{Journal of Geoscience Education}.
+%\item \ghedwards, C.B. Keller, C. Stewart, (\textit{in prep}). The early bombardment history of the asteroid belt constrained from meteorite thermochronology.
 %\item \ghedwards, T. Blackburn, G. Piccione, S. Tulaczyk. (\textit{in prep}). Uranium-series isotopes as tracers of physical and chemical weathering in glacial sediments from Taylor Valley, Antarctica. \textit{Chemical Geology}.
 \item \ghedwards, T. Blackburn, G. Piccione, S. Tulaczyk, G.H. Miller, C. Sikes. (\textit{in press}). Terrestrial evidence for ocean forcing of Heinrich events and subglacial hydrologic connectivity of the Laurentide Ice Sheet. \textit{Science Advances}.
 \item T. Blackburn, \ghedwards, S. Tulaczyk, M. Scudder, G. Piccione, B. Hallet, J.C. Zachos, B. Cheney, N. McLean, J.T. Babbe. 2020. Ice retreat in Wilkes Basin of East Antarctica during a warm interglacial. \textit{Nature} (583), 554-559. \href{https://doi.org/10.1038/s41586-020-2484-5}{doi: 10.1038/s41586-020-2484-5}. \textbf{Press:} \href{https://www.nationalgeographic.com/science/2020/07/east-antarctic-ice-sheet-more-vulnerable-to-melting-than-thought/}{National Geographic}.
