add dissertation link

--- a/Edwards_CV.tex
+++ b/Edwards_CV.tex
@@ -87,7 +87,7 @@ Hanover, NH, 03755, U.S.A.	\hfill \textit{Website:} \href{https://grahamedwards.
 
 \subsection*{\textbf{University of California Santa Cruz} \hfill 2021}
 \textit{PhD}: Earth Sciences\\
-\textit{Dissertation Title}: Applications of the uranium decay systems in deep time and the Quaternary: chronologic insights within planetary interiors and beneath glaciers\\
+\textit{Dissertation Title}: Applications of the uranium decay systems in deep time and the Quaternary: chronologic insights within planetary interiors and beneath glaciers [\href{https://escholarship.org/uc/item/0vp7r59z}{PDF}]\\
 \textit{Committee}: Profs. Terrence Blackburn (Chair), Slawek Tulaczyk, Myriam Telus.
 
 \subsection*{\textbf{Bowdoin College} \hspace{15pt} Brunswick, ME \hfill 2014}
