update and reorganize

--- a/Edwards_CV.tex
+++ b/Edwards_CV.tex
@@ -33,7 +33,7 @@
 	\titleformat*{\subsection}{\normalsize} %NOT \bfseries for right-aligned timeframes
 	\titlespacing*{\subsection}{0ex}{2ex}{.2ex}
 	\titleformat*{\subsubsection}{\normalsize\itshape}
-	\titlespacing*{\subsubsection}{0ex}{1ex}{.2ex}
+	\titlespacing*{\subsubsection}{0ex}{1ex}{.5ex}
 
 \renewcommand\labelitemi{\boldmath$\cdot$}
 
@@ -60,11 +60,11 @@
 
 % Address and Info
 Earth Sciences \\
-Dartmouth College \hfill \textit{Email:} graham.h.edwards@dartmouth.edu \\
-19 Fayerweather Hill Rd \hfill \textit{Phone:} 1~920~559~2279 \\
+Dartmouth College \hfill \textit{Email:} Graham.H.Edwards@dartmouth.edu \\
+209 Fairchild Hall \hfill \textit{Phone:} 1~920~559~2279 \\
 Hanover, NH, 03755, U.S.A.	\hfill \textit{Website:} \href{https://grahamedwards.github.io}{grahamedwards.github.io}
 
-\vspace{2ex}
+\vspace{1em}
 
 %-------------------------------------------
 %	Appointments
@@ -72,9 +72,8 @@ Hanover, NH, 03755, U.S.A.	\hfill \textit{Website:} \href{https://grahamedwards.
 
 \section*{CURRENT APPOINTMENT}
 \subsection*{\textbf{Dartmouth College} \hfill 2021 – Present}
-\textit{NSF Postdoctoral Scholar (Astronomy \&\ Astrophysics)}
+\textit{NSF Astronomy \&\ Astrophysics Postdoctoral Fellow}
 \begin{itemize}
-	\item[] Award \#\ 2102591
 	\item[] ``Planetesimal formation, giant planet migration, and stellar accretion in our solar system and beyond"
 	\item[] Advisors: Profs. C. Brenhin Keller (Earth Sciences) \&\ Elisabeth R. Newton (Physics \&\ Astronomy)
 \end{itemize}
@@ -99,26 +98,32 @@ Hanover, NH, 03755, U.S.A.	\hfill \textit{Website:} \href{https://grahamedwards.
 %-------------------------------------------
 
 \section*{PUBLICATIONS}
-
+\hfill* denotes student author
 \begin{etaremune} [itemsep=4pt, leftmargin=3ex]
 %item \ghedwards \&\ G. Piccione, M. Gomez. (\textit{in prep}). Viewership patterns of a virtual geoscience outreach program. \textit{Journal of Geoscience Education}.
 %\item \ghedwards, C.B. Keller, C. Stewart, (\textit{in prep}). The early bombardment history of the asteroid belt constrained from meteorite thermochronology.
 %\item \ghedwards, T. Blackburn, G. Piccione, S. Tulaczyk. (\textit{in prep}). Uranium-series isotopes as tracers of physical and chemical weathering in glacial sediments from Taylor Valley, Antarctica. \textit{Chemical Geology}.
-\item \ghedwards, T. Blackburn, G. Piccione, S. Tulaczyk, G.H. Miller, C. Sikes. (\textit{in press}). Terrestrial evidence for ocean forcing of Heinrich events and subglacial hydrologic connectivity of the Laurentide Ice Sheet. \textit{Science Advances}.
-\item T. Blackburn, \ghedwards, S. Tulaczyk, M. Scudder, G. Piccione, B. Hallet, J.C. Zachos, B. Cheney, N. McLean, J.T. Babbe. 2020. Ice retreat in Wilkes Basin of East Antarctica during a warm interglacial. \textit{Nature} (583), 554-559. \href{https://doi.org/10.1038/s41586-020-2484-5}{doi: 10.1038/s41586-020-2484-5}. \textbf{Press:} \href{https://www.nationalgeographic.com/science/2020/07/east-antarctic-ice-sheet-more-vulnerable-to-melting-than-thought/}{National Geographic}.
+\item \ghedwards, T. Blackburn, G. Piccione, S. Tulaczyk, G.H. Miller, C. Sikes*. (\textit{in press}). Terrestrial evidence for ocean forcing of Heinrich events and subglacial hydrologic connectivity of the Laurentide Ice Sheet. \textit{Science Advances}.
+\item T. Blackburn, \ghedwards, S. Tulaczyk, M. Scudder*, G. Piccione, B. Hallet, J.C. Zachos, B. Cheney, N. McLean, J.T. Babbe. 2020. Ice retreat in Wilkes Basin of East Antarctica during a warm interglacial. \textit{Nature} (583), 554-559. \href{https://doi.org/10.1038/s41586-020-2484-5}{doi: 10.1038/s41586-020-2484-5}. \textbf{Press:} \href{https://www.nationalgeographic.com/science/2020/07/east-antarctic-ice-sheet-more-vulnerable-to-melting-than-thought/}{National Geographic}.
 \item \ghedwards, T. Blackburn. 2020. Accretion of a large LL parent planetesimal from a recently formed chondrule population. \textit{Science Advances} (6), eaay8641. \href{https://advances.sciencemag.org/content/6/16/eaay8641}{doi: 10.1126/sciadv.aay8641}
 \item \ghedwards, T. Blackburn. 2018. Detecting the extent of ca. 1.1 Ga Midcontinent Rift plume heating using U-Pb thermochronology of the lower crust. \textit{Geology} (46), 911–914. \href{https://doi.org/10.1130/G45150.1}{doi: 10.1130/G45150.1} 
 \item \ghedwards. 2014. Geochemical and stratigraphic analysis of the Linnévatnet sediment record: a study of Late Holocene cirque glacier activity in Spitsbergen, Svalbard. [\textit{Honor’s Thesis}] Bowdoin College: Brunswick, ME, U.S.A. 73 pp. \href{https://digitalcommons.bowdoin.edu/honorsprojects/12/}{[Undergraduate Research Commons]}
 \end{etaremune}
 
+\vspace{2em}
 %-------------------------------------------
 %	TEACHING
 %-------------------------------------------
 
-\section*{TEACHING}
+\section*{TEACHING \&\ MENTORING}
+\subsection*{\textbf{Dartmouth College}}
+\subsubsection*{Mentored Undergraduate Researchers}
+\begin{itemize}
+	\item Cameron Stewart (2022)
+\end{itemize}
 
 \subsection*{\textbf{University of California Santa Cruz}}
-\textit{Graduate Teaching Assistant}
+\subsubsection*{Graduate Teaching Assistant}
 \begin{tabbing} \hspace{10pt} \= \hspace{2.5cm} \=  \kill
 \> Spring 2021 \> \textit{Radiogenic and Stable Isotopes}\\
 \> Fall 2020 \> \textit{Evolution of Earth}\\
@@ -127,8 +132,18 @@ Hanover, NH, 03755, U.S.A.	\hfill \textit{Website:} \href{https://grahamedwards.
 \> Winter 2018 \> \textit{Geologic Principles}
 \end{tabbing}
 
+\subsubsection*{Mentored Undergraduate Researchers}
+\begin{itemize}
+	\item Cosmo Varah-Sikes (2019-2021), thesis (2021)
+	\item Linh Phan (2020)
+	\item Michael Scudder (2018-2020), thesis (2020)
+	\item Alexander Levinson (2018)
+	\item Frances O'Byrne (2018)
+	\item Paul Colosi (2017-2018)
+\end{itemize}
+
 \subsection*{\textbf{Bowdoin College} \hspace{15pt} Brunswick, ME, U.S.A. \hfill 2012 – 2013}
-\textit{Laboratory Teaching Assistant}
+\subsubsection*{Laboratory Teaching Assistant}
 \begin{tabbing} \hspace{10pt} \= \hspace{2.5cm} \=  \kill
 \> Fall 2012, 2013 \> \textit{Investigating Earth}\\
 \> Fall 2013 \> \textit{Marine Biogeochemistry}
@@ -148,15 +163,15 @@ Hanover, NH, 03755, U.S.A.	\hfill \textit{Website:} \href{https://grahamedwards.
 \section*{OUTREACH \& PUBLIC SERVICE}
 
 \subsection*{\textbf{Montshire Museum of Science} \hfill 2022}
-\textit{Guest Scientist}
+\subsubsection*{Guest Scientist}
 \begin{itemize}
 \item Lead and assist in educational activities within the museum.
-\item Explain Earth and planetary science concepts to pre-K through adult audiences.
+\item Explain Earth and space science concepts to pre-K through adult audiences.
 \item Develop programming focused on planetary science topics.
 \end{itemize}
 
 \subsection*{\textbf{Santa Cruz Museum of Natural History} \hfill 2018 – 2022}
-\textit{Volunteer Scientist}
+\subsubsection*{Volunteer Scientist}
 \begin{itemize}
 	\item Created educational content and hosted activities at monthly museum events.
 	\item Co-hosted monthly educational video streams covering geoscience topics. \\
@@ -164,26 +179,31 @@ Hanover, NH, 03755, U.S.A.	\hfill \textit{Website:} \href{https://grahamedwards.
 \end{itemize}
 
 \subsection*{\textbf{Skype a Scientist} \hfill 2019 – Present}
-\textit{Volunteer Scientist}
+\subsubsection*{Volunteer Scientist}
 \begin{itemize}
 	\item Prepare educational content and host video calls with elementary and secondary school classrooms.
 	\item Teach geoscience concepts and share stories about experiences as a scientist.
 \end{itemize}
 
 \subsection*{\textbf{Geoscientists Encouraging Openness and Diversity in the Earth Sciences} \hfill 2019 – 2020}
-\textit{Graduate Student Leader}
+\subsubsection*{Graduate Student Leader}
 \begin{itemize}
 	\item (abbreviated \textbf{GEODES}) a student-run group in the UCSC Earth \& Planetary Sciences Department.
-	\item Organized and implemented outreach events centered on promoting underrepresented groups in the geosciences and cultivating a culture of inclusivity within the department.
 	\item One of six graduate student leaders responsible for the operation and development of GEODES.
+	\item Organized and implemented outreach events centered on promoting underrepresented groups in the geosciences and cultivating a culture of inclusivity within the department.
 \end{itemize}
 
-\subsection*{\textbf{Peary-MacMillan Arctic Museum} \hspace{15pt} Brunswick, ME, U.S.A. \hfill 2015 – 2016}
-\textit{Curatorial Intern}
+\subsection*{\textbf{Peary-MacMillan Arctic Museum} \hspace{15pt} Brunswick, ME, U.S.A. \hfill 2012 – 2016}
+\textit{Curatorial Intern}~~(2015 – 2016)
 \begin{itemize}
 	\item Developed outreach programming and exhibit content.
 	\item Supplemented undergraduate courses with lectures and discussions drawing on museum collections.
 	\item Mentored and trained undergraduate student interns and employees.
+\end{itemize}
+
+\textit{Student Tour Guide}~~(2012 – 2014)
+\begin{itemize}
+	\item Led hour-long museum tours for all age groups of museum exhibits and interactive collections.
 \end{itemize}
 
 \subsection*{\textbf{Museum of the Rockies} \hspace{15pt} Bozeman, MT, U.S.A. \hfill 2015}
@@ -216,33 +236,17 @@ Hanover, NH, 03755, U.S.A.	\hfill \textit{Website:} \href{https://grahamedwards.
 
 \section*{ACADEMIC SERVICE \& EXPERIENCE}
 
-\subsection*{\textbf{Mentored Undergraduates}}
-\subsubsection*{Dartmouth College}
-\begin{itemize}
-	\item Cameron Stewart (2022)
-\end{itemize}
-
-\subsubsection*{University of California Santa Cruz}
-\begin{itemize}
-	\item Cosmo Varah-Sikes (2019-2021), thesis (2021)
-	\item Linh Phan (2020)
-	\item Michael Scudder (2018-2020), thesis (2020)
-	\item Alexander Levinson (2018)
-	\item Frances O'Byrne (2018)
-	\item Paul Colosi (2017-2018)
-\end{itemize}
-
 \subsection*{\textbf{Departmental Service}}
 \subsubsection*{Department of Earth Sciences, Dartmouth}
 Earth \& Planetary History Journal Club --- Organizer 	 \hfill	Spring 2022
 \begin{itemize}
-	\item Scheduled, coordinated, and oversaw reading group spanning multi-disciplinary topics.
+	\item Scheduled, coordinated, and oversaw multidisciplinary reading group.
 \end{itemize}
 
 \subsubsection*{Department of Earth \& Planetary Sciences, UCSC}
 Whole Earth Seminar --- Organizer \hfill  Spring 2019
 \begin{itemize}
-	\item One of two graduate student organizers that coordinated a departmental seminar series.
+	\item Coordinated departmental seminar series (one of two graduate student organizers)
 	\item Contacted and scheduled speakers from diverse disciplines in Earth and planetary sciences.
 \end{itemize}
 
