add McKay award and reorganize Conference activities

--- a/Edwards_CV.tex
+++ b/Edwards_CV.tex
@@ -50,9 +50,6 @@
 %Name
 \begin{center}
 \LARGE\textbf{\underline{Graham Harper Edwards}}\\ [.3em]
- %{\normalsize\adforn{60}}\large~~he, him~~{\normalsize\adforn{32}}
- %{\normalsize\adforn{18}}\large~~he, him~~{\normalsize\adforn{46}}
-%{\normalsize\adforn{64}}\large~~he, him~~{\normalsize\adforn{36}}
 \large ---~~he, him~~---
 \end{center}
 
@@ -101,7 +98,7 @@ Hanover, NH, 03755, U.S.A.	\hfill \textit{Website:} \href{https://grahamedwards.
 \hfill* denotes student author
 \begin{etaremune} [itemsep=4pt, leftmargin=3ex]
 %item \ghedwards \&\ G. Piccione, M. Gomez. (\textit{in prep}). Viewership patterns of a virtual geoscience outreach program. \textit{Journal of Geoscience Education}.
-%\item \ghedwards, C.B. Keller, C. Stewart, (\textit{in prep}). The early bombardment history of the asteroid belt constrained from meteorite thermochronology.
+%\item \ghedwards, C.B. Keller, C. Stewart*, (\textit{in prep}). The early bombardment history of the asteroid belt constrained from meteorite thermochronology.
 %\item \ghedwards, T. Blackburn, G. Piccione, S. Tulaczyk. (\textit{in prep}). Uranium-series isotopes as tracers of physical and chemical weathering in glacial sediments from Taylor Valley, Antarctica. \textit{Chemical Geology}.
 \item \ghedwards, T. Blackburn, G. Piccione, S. Tulaczyk, G.H. Miller, C. Sikes*. (\textit{in press}). Terrestrial evidence for ocean forcing of Heinrich events and subglacial hydrologic connectivity of the Laurentide Ice Sheet. \textit{Science Advances}.
 \item T. Blackburn, \ghedwards, S. Tulaczyk, M. Scudder*, G. Piccione, B. Hallet, J.C. Zachos, B. Cheney, N. McLean, J.T. Babbe. 2020. Ice retreat in Wilkes Basin of East Antarctica during a warm interglacial. \textit{Nature} (583), 554-559. \href{https://doi.org/10.1038/s41586-020-2484-5}{doi: 10.1038/s41586-020-2484-5}. \textbf{Press:} \href{https://www.nationalgeographic.com/science/2020/07/east-antarctic-ice-sheet-more-vulnerable-to-melting-than-thought/}{National Geographic}.
@@ -125,11 +122,11 @@ Hanover, NH, 03755, U.S.A.	\hfill \textit{Website:} \href{https://grahamedwards.
 \subsection*{\textbf{University of California Santa Cruz}}
 \subsubsection*{Graduate Teaching Assistant}
 \begin{tabbing} \hspace{10pt} \= \hspace{2.5cm} \=  \kill
-\> Spring 2021 \> \textit{Radiogenic and Stable Isotopes}\\
-\> Fall 2020 \> \textit{Evolution of Earth}\\
+\> Spring 2021 \> \textit{Measuring Earth’s 4.5 Billion-Year History} (radiogenic and stable isotope geochemistry)\\
+\> Fall 2020 \> \textit{Evolution of Earth} (Earth history overview) \\
 \> Fall 2019 \> \textit{Elements of Field Geology}\\
 \> Spring 2018 \>  \textit{Geochemistry of the Solar System}\\
-\> Winter 2018 \> \textit{Geologic Principles}
+\> Winter 2018 \> \textit{Geologic Principles} (introductory Earth science)
 \end{tabbing}
 
 \subsubsection*{Mentored Undergraduate Researchers}
@@ -250,6 +247,13 @@ Whole Earth Seminar --- Organizer \hfill  Spring 2019
 	\item Contacted and scheduled speakers from diverse disciplines in Earth and planetary sciences.
 \end{itemize}
 
+\subsection*{\textbf{Academic Meetings}}
+\subsubsection*{Meteoritical Society Annual Meeting} 
+	\par\quad McKay Award Judge (best student oral presentation) \hfill 2022
+
+\subsubsection*{AGU Fall Meeting}
+	\par\quad Co-Chair/Co-Convener:~~Applications of Thermochronology to Understand Crustal Systems \hfill 2017
+
 \subsection*{\textbf{Laboratory Research \& Management}}
 Analytical Experience:
 	\begin{itemize} [label={}]
@@ -265,11 +269,6 @@ Under the advisorship of lab director Prof. Terry Blackburn, I was partially res
 	\item Preparation, measurement, and reporting of isotopic analyses of geologic and biomineral material for external contracts.
 	\item Procurement and preparation of lab consumables.
 	\end{itemize}
-	
-\subsection*{\textbf{Conference Sessions}}
-\begin{itemize}
-	\item 2017 AGU Fall Meeting $|$ Co-Chair/Co-Convener: \textit{Applications of Thermochronology to Understand Crustal Systems}
-\end{itemize}
 
 \vspace{2ex}
 \begin{hangparas}{5ex}{1}
