--- a/Edwards_CV.tex
+++ b/Edwards_CV.tex
@@ -100,10 +100,10 @@ Hanover, NH, 03755, U.S.A.	\hfill \textit{Website:} \href{https://grahamedwards.
 %item \ghedwards \&\ G. Piccione, M. Gomez. (\textit{in prep}). Viewership patterns of a virtual geoscience outreach program. \textit{Journal of Geoscience Education}.
 %\item \ghedwards, C.B. Keller, C. Stewart*, (\textit{in prep}). The early bombardment history of the asteroid belt constrained from meteorite thermochronology.
 %\item \ghedwards, T. Blackburn, G. Piccione, S. Tulaczyk. (\textit{in prep}). Uranium-series isotopes as tracers of physical and chemical weathering in glacial sediments from Taylor Valley, Antarctica. \textit{Chemical Geology}.
-\item \ghedwards, T. Blackburn, G. Piccione, S. Tulaczyk, G.H. Miller, C. Sikes*. (\textit{in press}). Terrestrial evidence for ocean forcing of Heinrich events and subglacial hydrologic connectivity of the Laurentide Ice Sheet. \textit{Science Advances}.
-\item T. Blackburn, \ghedwards, S. Tulaczyk, M. Scudder*, G. Piccione, B. Hallet, J.C. Zachos, B. Cheney, N. McLean, J.T. Babbe. 2020. Ice retreat in Wilkes Basin of East Antarctica during a warm interglacial. \textit{Nature} (583), 554-559. \href{https://doi.org/10.1038/s41586-020-2484-5}{doi: 10.1038/s41586-020-2484-5}. \textbf{Press:} \href{https://www.nationalgeographic.com/science/2020/07/east-antarctic-ice-sheet-more-vulnerable-to-melting-than-thought/}{National Geographic}.
-\item \ghedwards, T. Blackburn. 2020. Accretion of a large LL parent planetesimal from a recently formed chondrule population. \textit{Science Advances} (6), eaay8641. \href{https://advances.sciencemag.org/content/6/16/eaay8641}{doi: 10.1126/sciadv.aay8641}
-\item \ghedwards, T. Blackburn. 2018. Detecting the extent of ca. 1.1 Ga Midcontinent Rift plume heating using U-Pb thermochronology of the lower crust. \textit{Geology} (46), 911–914. \href{https://doi.org/10.1130/G45150.1}{doi: 10.1130/G45150.1} 
+\item \ghedwards, T. Blackburn, G. Piccione, S. Tulaczyk, G.H. Miller, C. Sikes*. 2022. Terrestrial evidence for ocean forcing of Heinrich events and subglacial hydrologic connectivity of the Laurentide Ice Sheet. \textit{Science Advances}. \href{https://www.science.org/doi/10.1126/sciadv.abp9329}{doi:~10.1126/sciadv.abp9329}.
+\item T. Blackburn, \ghedwards, S. Tulaczyk, M. Scudder*, G. Piccione, B. Hallet, J.C. Zachos, B. Cheney, N. McLean, J.T. Babbe. 2020. Ice retreat in Wilkes Basin of East Antarctica during a warm interglacial. \textit{Nature} (583), 554-559. \href{https://doi.org/10.1038/s41586-020-2484-5}{doi:~10.1038/s41586-020-2484-5}. \textbf{Press:} \href{https://www.nationalgeographic.com/science/2020/07/east-antarctic-ice-sheet-more-vulnerable-to-melting-than-thought/}{National Geographic}.
+\item \ghedwards, T. Blackburn. 2020. Accretion of a large LL parent planetesimal from a recently formed chondrule population. \textit{Science Advances} (6), eaay8641. \href{https://advances.sciencemag.org/content/6/16/eaay8641}{doi:~10.1126/sciadv.aay8641}
+\item \ghedwards, T. Blackburn. 2018. Detecting the extent of ca. 1.1 Ga Midcontinent Rift plume heating using U-Pb thermochronology of the lower crust. \textit{Geology} (46), 911–914. \href{https://doi.org/10.1130/G45150.1}{doi:~10.1130/G45150.1} 
 \item \ghedwards. 2014. Geochemical and stratigraphic analysis of the Linnévatnet sediment record: a study of Late Holocene cirque glacier activity in Spitsbergen, Svalbard. [\textit{Honor’s Thesis}] Bowdoin College: Brunswick, ME, U.S.A. 73 pp. \href{https://digitalcommons.bowdoin.edu/honorsprojects/12/}{[Undergraduate Research Commons]}
 \end{etaremune}
 
